Working board game CRUD, showing data on tables board game and designer